Perform currency conversions if necessary when importing transactions.

An imported transaction might have splits in accounts having different
currencies. If this is the case set the shares of the split using
the best conversion rate which is available at the date of the
transaction.

BUG: 339262